# maat-core

./: .gitignore  ACADEMIA.md  APPLICATIONS.md  CITATION.cff  CITATION.cff.txt  DOCUMENTATION.md  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements-lock.txt
examples/: emotion_demo.py  fairness_adult_threshold_demo.py  healthcare_ethics_demo.py  occam_demo.py  reflection_demo.ipynb  reflection_demo.py  respect_boundary_demo.py
src/maat_core/: __init__.py  core.py  diagnostics.py
tests/: conftest.py  test_occam.py
